# tsql-to-postgresql

./: .env.example  .gitignore  README.md  demo_complex.sql  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DiagnosticsPanel.tsx  SchemaPanel.tsx  SqlEditor.tsx  TableMappingsSection.tsx  TranslatePanel.tsx
frontend/src/hooks/: useSchema.ts  useTranslate.ts
frontend/src/types/: api.ts
src/tsql_migrator/: annotator.py  errors.py  generator.py  parser.py  pipeline.py  preprocessor.py  validator.py
src/tsql_migrator/api/: dependencies.py  main.py  models.py
src/tsql_migrator/cli/: app.py  schema_cmd.py  serve_cmd.py  translate_cmd.py
src/tsql_migrator/llm/: client.py  prompts.py  validator.py
src/tsql_migrator/rules/: datatype_rules.yaml  function_rules.yaml  registry.py  syntax_rules.yaml
src/tsql_migrator/schema/: ddl_parser.py  llm_suggester.py  mapping_engine.py  models.py  registry.py
src/tsql_migrator/transforms/: base.py  column_renamer.py  datatype_converter.py  function_rewriter.py  hint_stripper.py  syntax_rewriter.py  table_renamer.py
tests/: conftest.py
tests/fixtures/ddl/: redshift_sample.sql  sqlserver_sample.sql
tests/fixtures/tsql/: charindex_swap.sql  datepart_weekday.sql  isnull_coalesce.sql  nolock_strip.sql  top_n.sql  (+3 more)
tests/integration/: test_api_translate.py  test_llm_pipeline.py  test_pipeline_end_to_end.py
tests/unit/: test_llm_validator.py  test_parser.py  test_preprocessor.py  test_schema_registry.py
(+7 files in other folders)
